[package]
name = "gpu-observer"
authors = ["C Jones"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version= "4.2.7", features= ["derive"]}
nvml-wrapper = "0.9.0"
tabled = {version = "0.12.0", features = ["color"]}

