[package]
name = "bmon"
authors = ["C Jones (Charl-AI)"]
version = "0.1.0"
edition = "2021"
description = "A CLI tool for monitoring system metrics and diagnosing bottlenecks in GPU-accelerated applications."


[dependencies]
clap = {version= "4.2.7", features= ["derive"]}
nvml-wrapper = "0.9.0"
tabled = {version = "0.12.0", features = ["color"]}

